tests/toylang/neg/001535_mutation.toylang
program a = { var sleep a : bool; } .
